--- a/merger_tools/templates/merger_tools/index.html
+++ b/merger_tools/templates/merger_tools/index.html
@@ -64,7 +64,7 @@
                         Your browser does not support the video tag.
                     </video>
                 </div>
-                <button type="submit" class="btn btn-success">Success</button>
+                <button type="submit" class="btn btn-success">Select Template</button>
             </form>
         </div>
 
