--- a/merger_tools/templates/merger_tools/template.html
+++ b/merger_tools/templates/merger_tools/template.html
@@ -8,19 +8,185 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    
+  
+      <!-- Image and text -->
+<nav class="navbar navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img
+        src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
+        class="me-2"
+        height="20"
+        alt="MDB Logo"
+        loading="lazy"
+      />
+      <small>Video Merger Tools</small>
+    </a>
+  </div>
+</nav>
 
-    <div class="card" style="width: 18rem;">
+<style>
+  section{
+    margin: 5%;
+  }
+  section{
+    width: 100%;
+    display: block;
+  }
+  section .both-card{
+    float: left;
+    flex: auto;
+    margin: 20px;
+  }
+  .both-card .original {
+    background-color: rgb(0, 238, 255);
+  }
+  .both-card .merged{
+    background-color: rgb(248, 59, 59);
+  }
+  .both-card:hover{
+    color: aliceblue;
+  }
+  .both-card .card3 .card{
+    width: 100%;
+    float: left;
+  }
+  .card3 .card-body{
+    width: 100%;
+  }
+  .both-card button{
+    margin: 10px;
+  }
+
+</style>
+<section>
+  <h4>Templates 9:16</h4>
+  <div class="both-card">
+    <div class="card1">
+      <div class="card original" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title" name="original">Original Video</h5>
+        </div>
+      </div>
+      <div class="card merged" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Merged Video</h5>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-success">Select</button>
+    </div>
+  </div>
+  <div class="both-card">
+    <div class="card2">
+      <div class="card merged" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Merged Video</h5>
+        </div>
+      </div>
+      <div class="card original" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">Original Video</h5>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+    </div>
+    <button type="submit" class="btn btn-success">Select</button>
+  </div>
+  <div class="both-card">
+    <div class="card3">
+      <div class="card original" style="width: 18rem;">
         <div class="card-body">
-            <h5 class="card-title">Original Video</h5>
+          <h5 class="card-title">Original Video</h5>
         </div>
       </div>
+      <div class="card merged" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Merged Video</h5>
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-success">Select</button>
+  </div>
+  <div class="both-card">
+    <div class="card3">
+      <div class="card merged" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Merged Video</h5>
+        </div>
+      </div>
+      <div class="card original" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Original Video</h5>
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-success">Select</button>
+  </div>
+</section>
 
+
+<section>
+  <h4>Templates 1:1</h4>
+  <div class="both-card">
+    <div class="card1">
+      <div class="card original" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Original Video</h5>
+        </div>
+      </div>
+      <div class="card merged" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Merged Video</h5>
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-success">Select</button>
+  </div>
+  <div class="both-card">
+    <div class="card2">
+      <div class="card merged" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Merged Video</h5>
+        </div>
+      </div>
+      <div class="card original" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Original Video</h5>
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-success">Select</button>
+  </div>
+  <div class="both-card">
+    <div class="card3">
+      <div class="card original" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Original Video</h5>
+        </div>
+      </div>
+      <div class="card merged" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Merged Video</h5>
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-success">Select</button>
+  </div>
+  <div class="both-card">
+    <div class="card3">
+      <div class="card merged" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Merged Video</h5>
+        </div>
+      </div>
+      <div class="card original" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">Original Video</h5>
+        </div>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-success">Select</button>
+  </div>
+</section>
 
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
