--- a/merger_tools/templates/merger_tools/template.html
+++ b/merger_tools/templates/merger_tools/template.html
@@ -28,10 +28,8 @@
 <style>
   section{
     margin: 5%;
-  }
-  section{
     width: 100%;
-    display: block;
+    float: left;
   }
   section .both-card{
     float: left;
@@ -44,9 +42,6 @@
   .both-card .merged{
     background-color: rgb(248, 59, 59);
   }
-  .both-card:hover{
-    color: aliceblue;
-  }
   .both-card .card3 .card{
     width: 100%;
     float: left;
@@ -57,26 +52,42 @@
   .both-card button{
     margin: 10px;
   }
+  .both-card select{
+    padding: 5px;
+    margin: 5px;
+  }
 
 </style>
 <section>
   <h4>Templates 9:16</h4>
+  {% for i in video %}
+    <video src="{{i.original_video.url}}" width="100px" height="70px"></video>
+  {% endfor %}
   <div class="both-card">
     <form action="" method="post">
       {% csrf_token %}
     <div class="card1">
       <div class="card original" style="width: 18rem;">
         <div class="card-body">
-          <input class="card-title" name="original" value="Original Video">
+          <input class="card-title" name="temp1" value="Original Video">
         </div>
       </div>
       <div class="card merged" style="width: 18rem;">
         <div class="card-body">
-          <input class="card-title" name="merged" value="Merged Video">
+          <input class="card-title" name="temp1" value="Merged Video">
         </div>
       </div>
-      <button type="submit" class="btn btn-success">Select</button>
     </div>
+
+    <br>
+    <label for="">Sound of your video</label>
+    <select name="sound" id="">
+        <option value="no_sound">No Sounds</option>
+        <option value="s_from_original">Sound from original</option>
+        <option value="s_from_merged">Sound from merged</option>
+        <option value="s_from_both">Sound from both</option>
+    </select><br>
+    <button type="submit" class="btn btn-success">Select</button>
     </form>
   </div>
   <div class="both-card">
@@ -85,15 +96,23 @@
     <div class="card2">
       <div class="card merged" style="width: 18rem;">
         <div class="card-body">
-          <input class="card-title" name="merged" value="Merged Video">
+          <input class="card-title" name="temp2" value="Merged Video">
         </div>
       </div>
       <div class="card original" style="width: 18rem;">
         <div class="card-body">
-          <input class="card-title" name="original" value="Original Video">
+          <input class="card-title" name="temp2" value="Original Video">
         </div>
       </div>
     </div>
+    <br>
+    <label for="">Sound of your video</label>
+    <select name="sound" id="">
+        <option value="no_sound">No Sounds</option>
+        <option value="s_from_original">Sound from original</option>
+        <option value="s_from_merged">Sound from merged</option>
+        <option value="s_from_both">Sound from both</option>
+    </select><br>
     <button type="submit" class="btn btn-success">Select</button>
     </form>
   </div>
@@ -110,6 +129,14 @@
         </div>
       </div>
     </div>
+    <br>
+    <label for="">Sound of your video</label>
+    <select name="sound" id="">
+        <option value="no_sound">No Sounds</option>
+        <option value="s_from_original">Sound from original</option>
+        <option value="s_from_merged">Sound from merged</option>
+        <option value="s_from_both">Sound from both</option>
+    </select><br>
     <button type="submit" class="btn btn-success">Select</button>
   </div>
   <div class="both-card">
@@ -125,11 +152,19 @@
         </div>
       </div>
     </div>
+    <br>
+    <label for="">Sound of your video</label>
+    <select name="sound" id="">
+        <option value="no_sound">No Sounds</option>
+        <option value="s_from_original">Sound from original</option>
+        <option value="s_from_merged">Sound from merged</option>
+        <option value="s_from_both">Sound from both</option>
+    </select><br>
     <button type="submit" class="btn btn-success">Select</button>
   </div>
 </section>
 
-
+<br>
 <section>
   <h4>Templates 1:1</h4>
   <div class="both-card">
@@ -193,6 +228,12 @@
     <button type="submit" class="btn btn-success">Select</button>
   </div>
 </section>
+
+<script>
+  var e = document.getElementById("cutting");
+  var value = e.value;
+  var text = e.options[e.selectedIndex].text;
+</script>
 
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
