--- a/merger_tools/templates/merger_tools/index.html
+++ b/merger_tools/templates/merger_tools/index.html
@@ -68,7 +68,7 @@
                         <option value="one_with_many">One wiht money</option>
                     </select>
                 </div>
-                <button type="submit" class="btn btn-success">Select Template</button>
+                <button type="submit" class="btn btn-success">Upload</button>
             </form>
         </div>
 
