--- a/merger_tools/templates/merger_tools/preview.html
+++ b/merger_tools/templates/merger_tools/preview.html
@@ -19,6 +19,9 @@
             margin: 10px; 
             cursor: pointer;
         }
+        form span:hover{
+          background-color: chartreuse;
+        }
         .btn{
           margin: 20px;
           text-align: left;
@@ -26,56 +29,109 @@
         .btn a{
           color: black;
         }
+        .card{
+          width: 20rem;
+        }
+        .card video{
+          max-height: 20rem;
+          width: 100%;
+        }
+        button:hover{
+          background-color: chartreuse;
+        }
+        button{
+          cursor: pointer;
+        }
+        #ipt{
+          color: white;
+          border: white;
+          width: 1px;
+        }
+        h4{
+          padding: 20px;
+          color: deepskyblue;
+        }
 
     </style>
     
     <section>
-        <h2>original_vidoe</h2>
-        {% for v in o_video %}
-        <form action="" method="POST" id="" name="original">
-            {% csrf_token %}
-        <video src="{{v.original_video.url}}" width="200px" height="150px" controls autoplay></video><br>
-           <input type="text" name="video" id="" value="{{v.original_video.path}}"><br>
-           <span onclick="cut_o()">Cut</span><button type="submit">Don't Cut</button>
-           <div class="cut" id="cut_o" style="display: none;">
-                <div class="cutting">
-                    <label for="">Enter start and end in second to cut:</label><br>
-                    <input type="number" name="start" placeholder="Enter start"><br>
-                    <input type="number" name="end" placeholder="Enter ends">
-                </div>
-                <button type="submit" class="btn btn-success">Cut</button>
-           </div>
-        </form>
-        {% endfor %}
+      <div class="btn">
+        <button class="btn btn-success"><a href="{% url 'index' %}"> < Back</a></button>
+      </div>
+      <div class="btn">
+        <button class="btn btn-success"><a href="{% url 'templates' %}">Next ></a></button>
+      </div>
 
-        <h2>merged</h2>
-        {% for v in m_video %}
-        <form action="" method="POST" name="merged">
-            {% csrf_token %}
-        <video src="{{v.merged_video.url}}" width="200px" height="150px" controls autoplay></video><br>
-           <input type="text" name="video" id="" value="{{v.merged_video.path}}"><br>
-           <span onclick="cut_m()">Cut</span><button type="submit">Don't Cut</button>
-           <div class="cut" id="cut_m" style="display: none;">
-                <div class="cutting">
-                    <label for="">Enter start and end in second to cut:</label><br>
-                    <input type="number" name="start" placeholder="Enter start"><br>
-                    <input type="number" name="end" placeholder="Enter ends">
+        <div class="container ">
+          <h4>Original Video</h4>
+          <div class="row align-items-center">
+            {% for v in o_video %}
+              <form action="" method="POST">
+                {% csrf_token %}
+                <div class="col-6">  
+                  <div class="card">
+                    <video src="{{v.original_video.url}}" style="display: block;" class="card-img-top" autoplay controls></video>
+                    <div class="card-body">
+                      <h5 class="card-title">Original Video</h5>
+                      <input type="text" name="video" id="ipt" value="{{v.original_video.path}}"><br>
+                      <span onclick="cut_o()">Cut</span><button type="submit">Don't Cut</button>
+                      <div class="cut" id="cut_o" style="display: none;">
+                            <div class="cutting">
+                                <label for="">Enter start and end in second to cut:</label><br>
+                                <input type="number" name="start" placeholder="Enter start"><br>
+                                <input type="number" name="end" placeholder="Enter ends">
+                            </div>
+                            <button type="submit" class="btn btn-success">Cut</button>
+                      </div>
+                      
+                    </div>
+                  </div>
                 </div>
-                <button type="submit" class="btn btn-success">Cut</button>
-           </div>
-        </form>
-        {% endfor %}
+              </form>
+            {% endfor %}
+          </div>
+        </div>
+      
+
+        <div class="container ">
+          <h4>Merged Video</h4>
+          <div class="row align-items-center">
+            {% for v in m_video %}
+              <form action="" method="POST">
+                {% csrf_token %}
+                <div class="col-6">  
+                  <div class="card">
+                    <video src="{{v.merged_video.url}}" style="display: block;" class="card-img-top" autoplay controls></video>
+                    <div class="card-body">
+                      <h5 class="card-title">Original Video</h5>
+                      <input type="text" name="video" id="ipt" value="{{v.merged_video.path}}"><br>
+                      <span onclick="cut_m()">Cut</span><button type="submit">Don't Cut</button>
+                      <div class="cut" id="cut_o" style="display: none;">
+                            <div class="cutting">
+                                <label for="">Enter start and end in second to cut:</label><br>
+                                <input type="number" name="start" placeholder="Enter start"><br>
+                                <input type="number" name="end" placeholder="Enter ends">
+                            </div>
+                            <button type="submit" class="btn btn-success">Cut</button>
+                      </div>
+                      
+                    </div>
+                  </div>
+                </div>
+              </form>
+            {% endfor %}
+          </div>
+        </div>
 
     </section>
     <div class="btn">
-      <button class="btn btn-success"><a href="{% url 'templates' %}">Select Template</a></button>
+      <button class="btn btn-success"><a href="{% url 'templates' %}">Back</a></button>
+    </div>
+    <div class="btn">
+      <button class="btn btn-success"><a href="{% url 'templates' %}">Next</a></button>
     </div>
 
 <script>
-var form = document.getElementById("btn");
-function handleForm(event) { event.preventDefault(); } 
-form.addEventListener('submit', handleForm);
-
 
 function cut_o() {
   var x = document.getElementById('cut_o');
