--- a/merger_tools/templates/merger_tools/template.html
+++ b/merger_tools/templates/merger_tools/template.html
@@ -6,7 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-</head>
+    <link href=
+    "https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+            rel="stylesheet" />
+        <script src=
+    "https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+        </script>
+        <script src=
+    "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
+        </script>
+        <script src=
+    "https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js">
+        </script>
+
+  </head>
 <body>
   
       <!-- Image and text -->
@@ -18,18 +31,27 @@
         class="me-2"
         height="20"
         alt="MDB Logo"
-        loading="lazy"
-      />
+        loading="lazy"/>
       <small>Video Merger Tools</small>
     </a>
   </div>
 </nav>
 
 <style>
-  section{
-    margin: 5%;
+  .choose-template {
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-bottom: 20px;
     width: 100%;
     float: left;
+  }
+  #all-templates{
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .create-template{
+    padding-left: 5%;
+    padding-right: 5%;
   }
   section .both-card{
     float: left;
@@ -56,13 +78,138 @@
     padding: 5px;
     margin: 5px;
   }
+  .choose-template{
+    float: left;
+  }
+  .select, .own{
+    padding: 10px;
+    margin: 10px;
+    float: left;
+    background-color: aquamarine;
+    cursor: pointer;
+  }
+  .select:hover,.own:hover{
+    background-color: aqua;
+  }
+  .form-row span{
+    padding: 5px;
+    margin: 10px;
+    float: left;
+    background-color: rgb(23, 200, 223);
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  .form-row span:hover{
+    background-color: rgb(79, 170, 170);
+  }
+  #progress12{
+    margin-left: 5%;
+    margin-right: 15%;
+  }
+
+/* this point is dublicated */
+.btn{
+  margin: 20px;
+  text-align: left;
+}
+.btn a{
+  color: black;
+}
 
 </style>
+
+<section class="progress12" id="progress12">
+  <br><br>
+  
+  <!--Include bootstrap progress bar in div. 
+      Also specify width as 0% using CSS -->
+  <div class="progress progress-striped active">
+      <div class="progress-bar progress-bar-striped progress-bar-success" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+      </div>
+  </div>
+  <!--  <div class="progress">
+      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+    </div> -->
+
+</section>
+
+<section class='choose-template'>
+  <div class="select">
+    <span onclick="select_template()">Select from availabale templates</span>
+  </div>
+  <div class="own">
+    <span onclick="create_template()">Create Your Own Template</span>
+  </div>
+  
+</section>
+
 <section>
+  <div class="create-template" id="create-template" style="display: none;">
+    <form method="POST">
+      {% csrf_token %}
+      <div class="form-row">
+        <div class="form-group col-md-4">
+          <label for="inputState">Original video placement</label>
+          <select id="inputState" required name="o_place" class="form-control">
+            <option selected>Choose placement...</option>
+            <option value="top">Top</option>
+            <option value="bottom">Bottom</option>
+            <option value="left">Left side</option>
+            <option value="right">Right side</option>
+          </select>
+        </div>
+        <div class="form-group col-md-4">
+          <label for="inputState">Merged video placement</label>
+          <select id="inputState" required name="m_place" class="form-control">
+            <option selected>Choose placement...</option>
+            <option value="top">Top</option>
+            <option value="bottom">Bottom</option>
+            <option value="left">Left side</option>
+            <option value="right">Right side</option>
+          </select>
+        </div>
+      </div>
+      
+      <div class="form-row temp">
+        <div class="form-group col-md-2">
+          <label for="inputState">Template size:</label><br>
+          <span onclick="temp_1_1()"> 1-1 </span> 
+          <span onclick="temp_9_16()">9-16</span>
+        </div>
+      </div>
+
+      <div class="form-row" id="size-input" style="display: none;">
+        <div class="form-group col-md-2">
+          <label for="inputCity">Width</label>
+          <input type="number" required name="width" id="width" class="form-control" id="inputCity">
+        </div>
+        <div class="form-group col-md-2">
+          <label for="inputZip">Height</label>
+          <input type="number" required name="height" id="height" class="form-control" id="inputZip">
+        </div>
+      </div>
+
+      <div class="form-row form-group col-md-4">
+        <label for="inputState">Select sound</label>
+        <select id="inputState" required name="sound" class="form-control">
+          <option selected>Choose sound...</option>
+          <option value="no_sound">No Sounds</option>
+          <option value="s_from_original">Sound from original</option>
+          <option value="s_from_merged">Sound from merged</option>
+          <option value="s_from_both">Sound from both</option>
+        </select>
+      </div>
+
+      <button type="submit" onclick="progress()" class="btn btn-primary">Create</button>
+      
+    </form>
+  </div>
+</section>
+
+<section id="all-templates" style="display: none;">
   <h4>Templates 9:16</h4>
-  {% for i in video %}
-    <video src="{{i.original_video.url}}" width="100px" height="70px"></video>
-  {% endfor %}
+
+ <div class="9-16">
   <div class="both-card">
     <form action="" method="post">
       {% csrf_token %}
@@ -162,77 +309,146 @@
     </select><br>
     <button type="submit" class="btn btn-success">Select</button>
   </div>
-</section>
+ </div>
 
-<br>
-<section>
-  <h4>Templates 1:1</h4>
-  <div class="both-card">
-    <div class="card1">
-      <div class="card original" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Original Video</h5>
+  <div class="1-1">
+    <h4>Templates 1:1</h4>
+    <div class="both-card">
+      <div class="card1">
+        <div class="card original" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Original Video</h5>
+          </div>
+        </div>
+        <div class="card merged" style="width: 18rem;">
+          <div class="card-body">
+              <h5 class="card-title">Merged Video</h5>
+          </div>
         </div>
       </div>
-      <div class="card merged" style="width: 18rem;">
-        <div class="card-body">
+      <button type="submit" class="btn btn-success">Select</button>
+    </div>
+    <div class="both-card">
+      <div class="card2">
+        <div class="card merged" style="width: 18rem;">
+          <div class="card-body">
             <h5 class="card-title">Merged Video</h5>
+          </div>
+        </div>
+        <div class="card original" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Original Video</h5>
+          </div>
         </div>
       </div>
+      <button type="submit" class="btn btn-success">Select</button>
     </div>
-    <button type="submit" class="btn btn-success">Select</button>
-  </div>
-  <div class="both-card">
-    <div class="card2">
-      <div class="card merged" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Merged Video</h5>
+    <div class="both-card">
+      <div class="card3">
+        <div class="card original" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Original Video</h5>
+          </div>
+        </div>
+        <div class="card merged" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Merged Video</h5>
+          </div>
         </div>
       </div>
-      <div class="card original" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Original Video</h5>
-        </div>
-      </div>
+      <button type="submit" class="btn btn-success">Select</button>
     </div>
-    <button type="submit" class="btn btn-success">Select</button>
-  </div>
-  <div class="both-card">
-    <div class="card3">
-      <div class="card original" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Original Video</h5>
+    <div class="both-card">
+      <div class="card3">
+        <div class="card merged" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Merged Video</h5>
+          </div>
+        </div>
+        <div class="card original" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Original Video</h5>
+          </div>
         </div>
       </div>
-      <div class="card merged" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Merged Video</h5>
-        </div>
-      </div>
+      <button type="submit" class="btn btn-success">Select</button>
     </div>
-    <button type="submit" class="btn btn-success">Select</button>
   </div>
-  <div class="both-card">
-    <div class="card3">
-      <div class="card merged" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Merged Video</h5>
-        </div>
-      </div>
-      <div class="card original" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Original Video</h5>
-        </div>
-      </div>
-    </div>
-    <button type="submit" class="btn btn-success">Select</button>
-  </div>
+
+
 </section>
+<div class="btn">
+  <button class="btn btn-success"><a href="{% url 'index' %}"> < Back</a></button>
+</div>
+<div class="btn">
+  <button class="btn btn-success"><a href="{% url 'templates' %}">Next ></a></button>
+</div>
 
 <script>
-  var e = document.getElementById("cutting");
-  var value = e.value;
-  var text = e.options[e.selectedIndex].text;
+
+  function select_template(){
+  var x = document.getElementById('all-templates');
+  var y = document.getElementById('create-template');
+  if (x.style.display === 'none') {
+    y.style.display = 'none'
+    x.style.display = 'block';
+  } 
+  else {
+    x.style.display = 'none';
+  }
+}
+
+function create_template(){
+  var x = document.getElementById('create-template');
+  var y = document.getElementById('all-templates');
+  if (x.style.display === 'none') {
+    x.style.display = 'block';
+    y.style.display ='none'
+  }
+  else {
+    x.style.display = 'none';
+  }
+}
+
+function temp_1_1(){
+  var x = document.getElementById('size-input');
+  var input_w = document.getElementById('width');
+  var input_h = document.getElementById('height');
+  if (x.style.display === 'none') {
+    x.style.display = 'block';
+    input_w.value = "720";
+    input_h.value = '720';
+  }
+  else {
+    x.style.display = 'none';
+  }
+}
+
+function temp_9_16(){
+  var x = document.getElementById('size-input');
+  var input_w = document.getElementById('width');
+  var input_h = document.getElementById('height');
+  
+  if (x.style.display === 'none') {
+    x.style.display = 'block';
+    input_w.value = "720";
+    input_h.value = '1280';
+  }
+  else {
+    x.style.display = 'none';
+  }
+}
+
+function progress(){
+  var x = document.getElementById('progress12')
+  if (x.style.display === 'none'){
+      x.style.display === 'block'
+      $(".progress-bar").animate({
+                  width: "95%",
+          }, 2500);
+  }
+}
+
 </script>
 
       <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
