--- a/merger_tools/templates/merger_tools/preview.html
+++ b/merger_tools/templates/merger_tools/preview.html
@@ -1,16 +1,27 @@
 {% include 'merger_tools/bar.html' %}
 {% load static %}
     
-    <section>
+<style>
+  .container{
+    margin-right: 0px;
+    width: 100%;
+  }
+  .container .card{
+    width: 20rem;
+  }
+  .container h4{
+    color: rgb(43, 10, 230);
+  }
+</style>
+    <div class="sec">
       <div class="btn">
         <button class="btn btn-success"><a href="{% url 'index' %}"> < Back</a></button>
       </div>
       <div class="btn">
         <button class="btn btn-success"><a href="{% url 'templates' %}">Next ></a></button>
       </div>
-      <button type="" class="btn btn-primary"><a href="{% url 'doncut' firsto lasto firstm lastm %}"> Dont cut</a></button>
 
-        <div class="container ">
+        <div class="container">
           <h4>Original Video</h4>
           <div class="row align-items-center">
             {% for v in o_video %}
@@ -20,18 +31,8 @@
                   <div class="card">
                     <video src="{{v.original_video.url}}" style="display: block;" class="card-img-top" autoplay controls></video>
                     <div class="card-body">
-                      <h5 class="card-title">Original Video</h5>
-                      <input type="text" name="video" id="ipt" value="{{v.original_video.path}}"><br>
-                      <span onclick="cut_o()" value="v.original_video.id">Cut</span><button type="submit">Don't Cut</button>
-                      <!-- <input type="checkbox" name="dont_cut" value="{{v.id}}"> -->
-                      <div class="cut" value="{{v.original_video.id}}" id="cut_o" style="display: none;">
-                            <div class="cutting">
-                                <label for="">Enter start and end in second to cut:</label><br>
-                                <input type="number" name="start" placeholder="Enter start"><br>
-                                <input type="number" name="end" placeholder="Enter ends">
-                            </div>
-                            <button type="submit" class="btn btn-success">Cut</button>
-                      </div>
+                      <h5 class="card-title">{{v.original_video}}</h5>
+                      
                     </div>
                   </div>
                 </div>
@@ -51,18 +52,7 @@
                   <div class="card">
                     <video src="{{v.merged_video.url}}" style="display: block;" class="card-img-top" autoplay controls></video>
                     <div class="card-body">
-                      <h5 class="card-title">Merged Video</h5>
-                      <input type="text" name="video" id="ipt" value="{{v.merged_video.path}}"><br>
-                      <span onclick="cut_m()" value ='{{v.merged_video.id}}'>Cut</span><button type="submit">Don't Cut</button>
-                      
-                      <div class="cut" id="cut_m" value ='{{v.merged_video.id}}' style="display: none;">
-                            <div class="cutting">
-                                <label for="">Enter start and end in second to cut:</label><br>
-                                <input type="number" name="start" placeholder="Enter start"><br>
-                                <input type="number" name="end" placeholder="Enter ends">
-                            </div>
-                            <button type="submit" class="btn btn-success">Cut</button>
-                      </div>            
+                      <h5 class="card-title">{{v.merged_video}}</h5>   
                     </div>
                   </div>
                 </div>
@@ -71,8 +61,7 @@
           </div>
         
         </div>
-<!-- <a href="abbe/{{first}}/{{last}}">don cut all </a> -->
-    </section>
+    </div>
     <div class="btn">
       <button class="btn btn-success"><a href="{% url 'preview' %}">Back</a></button>
     </div>
