--- a/static/css/main.css
+++ b/static/css/main.css
@@ -341,6 +341,8 @@ form span{
     background-color: gray;
     margin: 10px; 
     cursor: pointer;
+    border: #333;
+    border-radius: 5px;
 }
 form span:hover{
   background-color: chartreuse;
@@ -428,6 +430,7 @@ h4{
     float: left;
     background-color: aquamarine;
     cursor: pointer;
+    border-radius: 8px;
   }
   .select:hover,.own:hover{
     background-color: aqua;
@@ -449,8 +452,6 @@ h4{
     margin-right: 15%;
     margin-bottom: 0%;
   }
-
-
 /* end templates */
 
 /* output start */
