--- a/merger_tools/templates/merger_tools/preview.html
+++ b/merger_tools/templates/merger_tools/preview.html
@@ -29,7 +29,7 @@
                 {% csrf_token %}
                 <div class="col-6">  
                   <div class="card">
-                    <video src="{{v.original_video.url}}" style="display: block;" class="card-img-top" autoplay controls></video>
+                    <video src="{{v.original_video.url}}" style="display: block;" class="card-img-top" controls></video>
                     <div class="card-body">
                       <h5 class="card-title">{{v.original_video}}</h5>
                       
