--- a/merger_tools/templates/merger_tools/template.html
+++ b/merger_tools/templates/merger_tools/template.html
@@ -44,7 +44,7 @@
       <div class="form-row">
         <div class="form-group col-md-4">
           <label for="inputState">Original video placement</label>
-          <select id="inputState" required name="o_place" class="form-control">
+          <select id="inputState1" required name="o_place" class="form-control">
             <option selected>Choose placement...</option>
             <option value="top">Top</option>
             <option value="bottom">Bottom</option>
@@ -54,7 +54,7 @@
         </div>
         <div class="form-group col-md-4">
           <label for="inputState">Merged video placement</label>
-          <select id="inputState" required name="m_place" class="form-control">
+          <select id="inputState2" required name="m_place" class="form-control">
             <option selected>Choose placement...</option>
             <option value="top">Top</option>
             <option value="bottom">Bottom</option>
@@ -263,16 +263,16 @@
        <label>Crop Original:</label>
        <select required name="crop_original">
          
-         <option value="middle">Middle</option>
-         <option value="top">Top</option>
-         <option value="bottom">Bottom</option>        
+         <option value="middle_side">Middle</option>
+         <option value="left">Left</option>
+         <option value="right">Right</option>        
        </select><br>
        <label>Crop Merged:</label>
        <select required name="crop_merged">
          
-         <option value="middle" selected>Middle</option>
-         <option value="top">Top</option>
-         <option value="bottom">Bottom</option>        
+        <option value="middle_side">Middle</option>
+        <option value="left">Left</option>
+        <option value="right">Right</option>        
        </select><br>
        <label>Output format:</label>
        <select required name="resize">
@@ -316,16 +316,16 @@
        <label>Crop Original:</label>
        <select required name="crop_original">
          
-         <option value="middle">Middle</option>
-         <option value="top">Top</option>
-         <option value="bottom">Bottom</option>        
+        <option value="middle_side">Middle</option>
+        <option value="left">Left</option>
+        <option value="right">Right</option>          
        </select><br>
        <label>Crop Merged:</label>
        <select required name="crop_merged">
          
-         <option value="middle" selected>Middle</option>
-         <option value="top">Top</option>
-         <option value="bottom">Bottom</option>        
+        <option value="middle_side">Middle</option>
+        <option value="left">Left</option>
+        <option value="right">Right</option>        
        </select><br>
        <label>Output format:</label>
        <select required name="resize">
@@ -485,16 +485,16 @@
          <label>Crop Original:</label>
          <select required name="crop_original">
            
-           <option value="middle">Middle</option>
-           <option value="top">Top</option>
-           <option value="bottom">Bottom</option>        
+          <option value="middle_square">Middle</option>
+          <option value="left">Left</option>
+          <option value="right">Right</option>        
          </select><br>
          <label>Crop Merged:</label>
          <select required name="crop_merged">
            
-           <option value="middle" selected>Middle</option>
-           <option value="top">Top</option>
-           <option value="bottom">Bottom</option>        
+          <option value="middle_square">Middle</option>
+          <option value="left">Left</option>
+          <option value="right">Right</option>       
          </select><br>
          <label>Output format:</label>
          <select required name="resize">
@@ -538,16 +538,16 @@
          <label>Crop Original:</label>
          <select required name="crop_original">
            
-           <option value="middle">Middle</option>
-           <option value="top">Top</option>
-           <option value="bottom">Bottom</option>        
+          <option value="middle_square">Middle</option>
+          <option value="left">Left</option>
+          <option value="right">Right</option>       
          </select><br>
          <label>Crop Merged:</label>
          <select required name="crop_merged">
            
-           <option value="middle" selected>Middle</option>
-           <option value="top">Top</option>
-           <option value="bottom">Bottom</option>        
+          <option value="middle_square">Middle</option>
+          <option value="left">Left</option>
+          <option value="right">Right</option>      
          </select><br>
          <label>Output format:</label>
          <select required name="resize">
