--- a/merger_tools/templates/merger_tools/output.html
+++ b/merger_tools/templates/merger_tools/output.html
@@ -10,7 +10,7 @@
             {% for out in outputs %}
           <div class="col-4">
             <div class="card" style="max-width: 18rem;">
-              <video src="{{out.output.url}}" style="display: block;" class="card-img-top" autoplay controls></video>
+              <video src="{{out.output.url}}" style="display: block;" class="card-img-top" controls></video>
               <div class="card-body">
                 <h6 class="card-title">Your Output Video</h6>
                 <a href="{{out.output.url}}" download class="btn btn-primary">Downlaod</a>
