--- a/merger_tools/templates/merger_tools/output.html
+++ b/merger_tools/templates/merger_tools/output.html
@@ -3,6 +3,7 @@
 
 
 <div class="output">
+  {% if c != 0 %}
     <div class="container ">
         <h4>Here is your output. please downlaod your video. it will get deleted after some times.</h4>
         <a href="{{zipf.file.url}}" download class="btn btn-primary" >Downlaod All Video</a>
@@ -19,7 +20,11 @@
           </div>
           {% endfor %}
         </div>
-  </div>
+    </div>
+    {% else %}
+  <h4>You don't have any output, Please select the correct template </h4>
+  {% endif %}
+  
      
   </div>
 <div class="btn">
