--- a/merger_tools/templates/merger_tools/template.html
+++ b/merger_tools/templates/merger_tools/template.html
@@ -297,10 +297,10 @@
        {% csrf_token %}
        <div class="card3">
         <div class="card original" style="width: 7rem; height: 18rem;">
-         <input class="temp3" name="temp4" value="Original Video">  
+         <input class="temp3" name="temp4" value="Merged Video">  
         </div>
         <div class="card merged" style="width: 7rem; height: 18rem; margin-bottom: 10px;">
-            <input class="card-title" name="temp4" value="Merged Video">
+            <input class="card-title" name="temp4" value="Original Video">
         </div>
       </div>  
      <br>
